compiler/test/conformance/testdata/errors/16_alias_uninit_field.yz
Bar: { f String }

main: {
    b : Bar()
    c : b
    print(c.f)
}
